# pharmakon-ocr

./: .dockerignore  .gitignore  AUDIT.md  Dockerfile  README.md  instructions.md  pyproject.toml
configs/: classes.yaml  data.yaml
configs/detection/: rfdetr_medium.yaml  rfdetr_nano_vignette.yaml  rfdetr_vignette.yaml
configs/facture/: claude.yaml
configs/nomenclature/: correction.yaml
configs/ocr/: finetune.yaml  recognition.yaml
configs/parsing/: fields.yaml
configs/v2/: claude.yaml  fullpage_doctr.yaml  vlm_donut.yaml
data/: README.roboflow.txt
data/test/: _annotations.coco.json
data/train/: _annotations.coco.json
data/valid/: _annotations.coco.json
data2/: README.dataset.txt  README.roboflow.txt
data2/test/: _annotations.coco.json
data2/train/: _annotations.coco.json
data2/valid/: _annotations.coco.json
docs/: ARCHITECTURE.md  DATASET.md  DETECTION.md  FUTURE.md  HITL.md  INTEGRATION.md  INTERFACES.md  MONITORING.md  NOMENCLATURE_CORRECTION.md  OCR.md  ROADMAP.md  SECURITY.md  SERVING.md  SWITCHOVER.md  TESTING.md
fixtures/: nomenclature.csv
fixtures/synthetic/: ground_truth.json
fixtures/synthetic/test/: _annotations.coco.json
fixtures/synthetic/train/: _annotations.coco.json
fixtures/synthetic/valid/: _annotations.coco.json
logs/slurm/: .gitkeep
logs/slurm/01_validate/: vignocr-01-validate-62316896.err  vignocr-01-validate-62316896.out  vignocr-01-validate-62317745.err  vignocr-01-validate-62317745.out  vignocr-01-validate-62328516.err  vignocr-01-validate-62332570.err  vignocr-01-validate-62354776.err  vignocr-01-validate-62369140.err  vignocr-01-validate-62369140.out
logs/slurm/01_validate/62316896/: BACKPOINTERS.txt
logs/slurm/01_validate/62317745/: BACKPOINTERS.txt
logs/slurm/01_validate/62328516/: BACKPOINTERS.txt  DONE
logs/slurm/01_validate/62332570/: BACKPOINTERS.txt  DONE
logs/slurm/01_validate/62354776/: BACKPOINTERS.txt  DONE
logs/slurm/01_validate/62369140/: BACKPOINTERS.txt  DONE
logs/slurm/02_train_detection/: vignocr-02-train-det-62325883.err  vignocr-02-train-det-62328518.err  vignocr-02-train-det-62328518.out  vignocr-02-train-det-62369142.err  vignocr-02-train-det-62369142.out
logs/slurm/02_train_detection/62328518/: BACKPOINTERS.txt  FAILED
logs/slurm/02_train_detection/62369142/: BACKPOINTERS.txt  FAILED
logs/slurm/02a_train_vignette/: vignocr-02a-train-vignette-62328517.err  vignocr-02a-train-vignette-62328517.out  vignocr-02a-train-vignette-62332571.err  vignocr-02a-train-vignette-62332571.out  vignocr-02a-train-vignette-62369141.err  vignocr-02a-train-vignette-62369141.out
logs/slurm/02a_train_vignette/62328517/: BACKPOINTERS.txt
logs/slurm/02a_train_vignette/62332571/: BACKPOINTERS.txt  FAILED
logs/slurm/02a_train_vignette/62369141/: BACKPOINTERS.txt  FAILED
memory/: MEMORY.md  narval-env-and-failures.md  pharmakon-ocr-integration.md  vignocr-dataset-gaps.md
scripts/: build_vlm_dataset.py  diagnose_run.sh  fetch_pretrained.sh  fetch_pretrained_v2.sh  fix_install.sh  ingest_nomenclature.py  setup_narval.sh
slurm/: 00_smoke_train.sbatch  01_validate_data.sbatch  02_train_detection.sbatch  02a_train_vignette.sbatch  02b_train_detection_ddp.sbatch  03_eval_export_detection.sbatch  04_autolabel_ocr.sbatch  04_train_ocr.sbatch  05_eval_ocr.sbatch  05_finetune_ocr.sbatch  06_pipeline_benchmark.sbatch  12_build_vlm_dataset.sbatch  13_train_vlm_donut.sbatch  14_compare_variants.sbatch  lib.sh  submit_all.sh  submit_v2.sh
src/vignocr/: cli.py
src/vignocr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/vignocr/common/: __init__.py  config.py  schemas.py
src/vignocr/data/: coco.py  stats.py  validate.py
src/vignocr/detection/: __init__.py  _resolve.py  eval.py  export.py  infer.py  train.py
src/vignocr/facture/: __init__.py  claude_extract.py  verify.py
src/vignocr/nomenclature/: __init__.py  loader.py  match.py
src/vignocr/ocr/: __init__.py  autolabel.py  eval.py  finetune.py  infer.py  preprocess.py  train.py
src/vignocr/parsing/: checksum.py  codes.py  dates.py  ppa_shp.py  record.py
src/vignocr/pipeline/: __init__.py  orchestrator.py  preprocess.py  reimbursability.py  stubs.py
src/vignocr/serving/: app.py  deps.py  schemas.py
src/vignocr/v2/: __init__.py  claude_extract.py  compare.py  donut_format.py  donut_infer.py  donut_train.py  fullpage.py  normalize.py
tests/: conftest.py  test_benchmark.py  test_dataset_integrity.py  test_facture.py  test_nomenclature_correction.py  test_parsing_checksum.py  test_pipeline_e2e.py  test_serving_api.py  test_serving_facture.py  test_stages_a_and_c.py  test_v2_claude.py  test_v2_variants.py
