# =============================================================================
# pharmakon-ocr (VignOCR) — packaging + tooling. Pinned, reproducible.
#   core deps  -> run parsing/nomenclature/data/serving/pipeline on CPU today.
#   [ml] extra -> torch/RF-DETR/OCR/ONNX, installed on Narval / GPU hosts only.
# =============================================================================
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vignocr"
version = "0.1.0"
description = "VignOCR — enterprise OCR for Algerian pharmaceutical vignettes."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Proprietary" }

# Core (light, CPU). Pins are RANGES (not ==) so the same pyproject works against
# both PyPI (local dev: gets the latest 2.x) AND the Compute Canada wheelhouse on
# Narval (which carries CC-rebuilt wheels at specific versions — see avail_wheels).
# Tighten back to == once a deployable lockfile (uv/poetry) is added.
dependencies = [
  "pyyaml>=6.0,<7",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.6,<3",
  "numpy>=2.1,<3",
  "pillow>=11.0,<12",
  "python-dateutil>=2.9,<3",
  "rapidfuzz>=3.10,<4",
  "openpyxl>=3.1,<4",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.32,<1",
  "python-multipart>=0.0.17",
  "structlog>=24.4,<26",
]

[project.optional-dependencies]
# Installed on Narval/GPU hosts (CUDA wheels via module stack / wheelhouse).
# Same range-relaxation as core: pip picks whatever the wheelhouse carries.
#
# IMPORTANT — wheelhouse availability is non-uniform:
#   * `rfdetr` ships on PyPI (Roboflow) but is NOT mirrored to the Compute Canada
#     wheelhouse as of 2026-06. On Narval, `pip install --no-index -e .[ml]` will
#     therefore SKIP rfdetr; scripts/setup_narval.sh detects this and falls back
#     to `pip install rfdetr ...` over the login-node proxy (login nodes DO have
#     limited outbound HTTPS). DO NOT add a git+ placeholder here — pip rejects
#     PEP 440 URLs with `<>` placeholders, and a real fork URL belongs in a lock
#     file (uv/poetry), not in pyproject.toml.
#   * `paddleocr` / `paddlepaddle` are likewise often missing from the wheelhouse.
#     The OCR fine-tune (Stage C) is human-gated and will install them just-in-time
#     before stage 05 — Stage A + B (detection) do NOT need them.
ml = [
  "torch>=2.4",
  "torchvision>=0.19",
  # torch's LAZY/transitive deps. The torch wheel doesn't always declare these
  # as hard requirements, but torch._dynamo (imported transitively from
  # torchvision.ops -> roi_align -> _dynamo) does `import sympy / networkx /
  # jinja2 / fsspec / filelock` at runtime. On Compute Canada's wheelhouse,
  # `pip install --no-index -e .[ml]` skips deps the parent doesn't declare —
  # so we declare them HERE so they always land in the venv. This avoids the
  # silent "ModuleNotFoundError: No module named 'sympy'" we hit at runtime.
  "sympy",
  "networkx",
  "jinja2",
  "filelock",
  "fsspec",
  "typing_extensions",
  "rfdetr>=1.1",
  "onnx>=1.17",
  "onnxruntime>=1.20",
  "pycocotools>=2.0.6",
  "albumentations>=1.4",
  "opencv-python-headless>=4.10",
  "paddleocr>=2.9",
  "paddlepaddle>=2.6",
]
dev = [
  "pytest==8.3.4",
  "pytest-cov==6.0.0",
  "httpx==0.28.1",
  "ruff==0.8.4",
  "black==24.10.0",
  "pre-commit==4.0.1",
]

[project.scripts]
vignocr = "vignocr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "ml: requires the [ml] extra (torch/RF-DETR/OCR) — skipped on core CPU runs",
  "slow: long-running",
]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # black owns line length

[tool.black]
line-length = 100
target-version = ["py310"]
